# matchingengine

./: CMakeLists.txt  README.md  TECH_STACK.md  build_core.sh  build_matching_engine.sh  build_queues.sh
benchmarks/: bench_network.cpp
examples/: network_demo.cpp
include/core/: matching_engine.hpp  order.hpp  orderbook.hpp
include/network/: arbitrage_detector.hpp  feed_handler.hpp  feed_simulator.hpp  market_data.hpp
include/utils/: mpmc_queue.hpp  spsc_queue.hpp
matchingengine/: build.sh
matchingengine/src/: main.cpp
matchingengine/tests/: test_orderbook.cpp
src/core/: matching_engine.cpp  orderbook.cpp
tests/: benchmark_queues.cpp  test_matching_engine.cpp  test_network.cpp  test_order.cpp  test_orderbook.cpp  test_queues.cpp
